# notify

./: .env.example  .gitignore  API.md  README.md  SKILL.md  docker-compose.yml  install.sh  install_cli.sh  pyproject.toml
.claude/: settings.json
.claude/memory/: architecture.md  conventions.md  integrations.md
app/: __init__.py  config.py  main.py
app/api/: contacts.py  health.py  logs.py  messages.py  router.py  templates.py
app/integrations/: elevenlabs.py  http_client.py  whatsapp.py
app/models/: __init__.py  contact.py  log.py  message.py
app/schemas/: contact.py  log.py  message.py
app/services/: contact_service.py  log_service.py  message_service.py  template_service.py
app/services/clients/: __init__.py  deepseek.py  elevenlabs.py  gemini.py  smtp.py  whatsapp.py
backend/: Dockerfile  docker-entrypoint.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_seed_singletons.py  0003_sms_device_sim.py  0004_remove_client.py  0005_postgres_initial.py
backend/app/: baileys_db.py  baileys_ws.py  cli.py  config.py  db.py  main.py
backend/tests/: conftest.py  test_clients.py  test_markdown.py  test_normalize.py  test_notifications.py  test_recipients.py  test_router.py
baileys-sidecar/: .dockerignore  Dockerfile  check_sock.mjs  db.js  index.js  package-lock.json  package.json  sqlite-auth-state.js
docs/: ai-agent-skill.md  deploy.md
migrations/models/: 0_20260505151406_init.py
scripts/: backup.sh  logs.sh  send-test.sh
specs/: plan.md  spec.md  tasks.md
tests/: conftest.py  test_contacts.py  test_health.py
(+34 files in other folders)
